# chatTTS-timbre

./: .env  .gitignore  DEVELOPMENT.md  LICENSE  README.md  app.py  package.json  pyproject.toml  requirements.txt  start.sh  test.py
static/js/: index.js
static/style/: index.css
templates/: index.html
utils/: __init__.py  config.py  core.py
